<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchProtocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/tcp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_client_transport"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/chat_ip_address_hint"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@+id/text_client_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_client_ip_address"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:inputType="number"
        android:textSize="20sp"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@+id/text_client_transport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_client_port"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message_tip"
        android:textSize="20sp"
        android:gravity="center"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@+id/chat_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchProtocol"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResponse"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewResponse"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/response"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_author"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_client_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_ip_address"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextIpAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_client_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIpAddress"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_client_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_transport_protocol"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/switchProtocol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/chat_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/chat_author"
        android:gravity="center"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@+id/textViewResponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessage"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>