<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewIpAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ip_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/text_server_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_server_ip_address"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:autofillHints=""
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/switchProtocol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_server_port"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonStartServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_server"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStopServer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonStopServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_server"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartServer"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchProtocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protocol"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_server_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartServer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_server_client"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_server_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_socket"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewIpAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_server_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIpAddress"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_server_client"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/server_client"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textViewMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchProtocol"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>